# Agents

./: 0_basics.ipynb  0_test.ipynb  10_joke.ipynb  1_bmi.ipynb  2_simple_llm_workflow.ipynb  3_blog.ipynb  9_Chatbot.ipynb  chatbot_backend.py  chatbot_frontend.py  langchain.py  main.py  output_parsers.py  pyproject.toml
semantic_search/: app.py
