[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "pypdf>=6.2.0",
    "tavily-python>=0.7.12",
]
